tests/snapshots/regression/recovery__missing_closer_then_continue.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/missing_closer_then_continue.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • tests/fixtures/recovery/missing_closer_then_continue.flx
error[E076]: Missing Closing Delimiter

Expected a closing `]` to match this opening `[`.

  tests/fixtures/recovery/missing_closer_then_continue.flx:1:9
  |
1 | let a = [1, 2, 3;
  |         ^

note: Expected `]` before this token.
  tests/fixtures/recovery/missing_closer_then_continue.flx:1:17
  |
1 | let a = [1, 2, 3;
  |                 ^
